setting up the basics

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,94 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.cornerBanners {
+  position: fixed;
+  top: 0px;
+  height: 40px;
+  width: 100%;
+}
+.rightLink {
+  position: absolute; 
+  right: 0; 
+  border: 0;
+}
+.leftLink {
+  position: absolute;
+  left: 0; 
+  border: 0;
+}
+h2 {
+  margin: 3px;
+  font-family: "Cat Cafe";
+  font-size: 54px;
+  color: aliceblue;
+}
+/* Smartphones (portrait) ----------- */
+@media only screen and (max-width : 415px) {
+  h2 {
+      margin: 20px;
+      font-family: "Cat Cafe";
+      font-size: 32px;
+      color: aliceblue;
+  }
+  .rightLink {
+      position: absolute; 
+      right: 0; 
+      border: 0;
+      width: 80px;
+  }
+  .leftLink {
+      position: absolute;
+      left: 0; 
+      border: 0;
+      width: 80px;
+  }
+}
+
+.shareButtons {
+  margin: 0 auto;
+  font-family: "Cat Cafe";
+  font-size: 24px;
+  height: 35px;
+  color: aliceblue;
+  position: fixed;
+  bottom: 77px;
+  width: 100%;
+}
+.shareTheGame {
+  vertical-align: middle;
+  line-height: 30px;
+}
+#shareButton img {
+  width: 35px;
+  padding: 5px;
+  border: 0;
+  box-shadow: 0;
+  display: inline;
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen and (max-width : 415px) {
+  .shareButtons {
+      margin: 0 auto;
+      font-family: "Cat Cafe";
+      font-size: 16px;
+      height: 20px;
+      color: aliceblue;
+      position: fixed;
+      bottom: 65px;
+      width: 100%;
+  }
+  .shareTheGame {
+      vertical-align: middle;
+      line-height: 20px;
+  }
+  #shareButton img {
+      width: 20px;
+      padding: 5px;
+      border: 0;
+      box-shadow: 0;
+      display: inline;
+  }
+}
